[gd_scene load_steps=27 format=2]

[ext_resource path="res://props/sky/BackgroundBlueSky.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/OnScreenUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/Pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/MusicPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://rooms/isolatedRooms/RoomC.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/isolatedRooms/RoomA.tscn" type="PackedScene" id=6]
[ext_resource path="res://rooms/isolatedRooms/RoomB.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]
[ext_resource path="res://rooms/isolatedRooms/RoomD.tscn" type="PackedScene" id=9]
[ext_resource path="res://rooms/isolatedRooms/RoomE.tscn" type="PackedScene" id=10]
[ext_resource path="res://rooms/isolatedRooms/RoomF.tscn" type="PackedScene" id=11]
[ext_resource path="res://rooms/isolatedRooms/RoomG.tscn" type="PackedScene" id=12]
[ext_resource path="res://game_events.tres" type="Resource" id=13]
[ext_resource path="res://rooms/isolatedRooms/RoomH.tscn" type="PackedScene" id=14]
[ext_resource path="res://rooms/isolatedRooms/TraderA.tscn" type="PackedScene" id=15]
[ext_resource path="res://rooms/isolatedRooms/EmblemA.tscn" type="PackedScene" id=16]
[ext_resource path="res://interface/ui_elements/CurrentLevel.tscn" type="PackedScene" id=17]
[ext_resource path="res://rooms/isolatedRooms/RoomI.tscn" type="PackedScene" id=18]
[ext_resource path="res://rooms/isolatedRooms/TraderB.tscn" type="PackedScene" id=19]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("OverviewCamera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OverviewCamera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4608, 2816 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/CurrentLevel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "end_game"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "next_game"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "overview"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("OverviewCamera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OverviewCamera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 4.8 ),
"transitions": PoolRealArray( 1.6245, 0.353554, 1 ),
"update": 0,
"values": [ Vector2( 4608, 2816 ), Vector2( 2020.03, 1181.49 ), Vector2( 960, 512 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "toggle_the_game"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "start_game"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "toggle_the_game"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "flash_screen"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Main" type="YSort"]
script = ExtResource( 8 )
game_events = ExtResource( 13 )
rooms = [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 18 ) ]
grid_width = 5
grid_height = 3

[node name="BackgroundBlueSky" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OnScreenUI" parent="CanvasLayer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="CurrentLevel" parent="CanvasLayer" instance=ExtResource( 17 )]
visible = false
margin_left = 1622.0
margin_top = 980.0
margin_right = 1867.0
margin_bottom = 1036.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="MusicPlayer" parent="." instance=ExtResource( 4 )]
volume_db = -25.125

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/end_game = SubResource( 4 )
anims/next_game = SubResource( 7 )
anims/overview = SubResource( 2 )
anims/start_game = SubResource( 3 )

[node name="InterfaceEffect" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/flash_screen = SubResource( 6 )

[node name="OverviewCamera" type="Camera2D" parent="."]
position = Vector2( 4608, 2816 )
zoom = Vector2( 1.5, 1.5 )
